--- a/data/projects.json
+++ b/data/projects.json
@@ -5,7 +5,7 @@
         "urlGithub": "private",
         "urlSite": "https://accessories16.vercel.app",
         "skills": [
-            "./img/skills/tailwind.png",
+            "./img/skills/tailwind.PNG",
             "./img/skills/react.png"
         ]
     },
